--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
                 <div class="s-type text-center">
                     <div class="s-type-list big">
                         <div class="anchor" style="position: absolute; left: 50%; opacity: 0;"></div>
-                        <label for="type-wiki" data-id="group-c"><span>中文wiki</span></label>
-                        <label for="type-baidu" data-id="group-a"><span>常用</span></label>       
+                        <label for="type-wiki" data-id="group-a"><span>中文wiki</span></label>
+                        <label for="type-baidu" data-id="group-c"><span>常用</span></label>
                     </div>
                 </div>
             </div>
@@ -431,17 +431,23 @@
             <div id="search-list" class="hide-type-list">
                 <div class="search-group group-a">
                     <ul class="search-type">
-                        <li><input hidden="" type="radio" name="type" checked="checked" id="type-baidu"
-                                value="https://www.baidu.com/s?wd=" data-placeholder="百度一下，你就知道">
-                            <label for="type-baidu"><span class="text-muted">百度</span></label>
+                        <li><input hidden="" type="radio" name="type" id="type-wiki"
+                                value="https://ff14.huijiwiki.com/wiki/" data-placeholder="所有东西查查查">
+                            <label for="type-wiki"><span class="text-muted">直接查询</span></label>
                         </li>
-                        <li><input hidden="" type="radio" name="type" id="type-google"
-                                value="https://www.google.com/search?q=" data-placeholder="谷歌搜索">
-                            <label for="type-google"><span class="text-muted">谷歌</span></label>
+                        <li><input hidden="" type="radio" name="type" id="type-wiki-wp"
+                                value="https://ff14.huijiwiki.com/wiki/ItemSearch?name=" data-placeholder="只查询物品，物品检索器">
+                            <label for="type-wiki-wp"><span class="text-muted">物品查询</span></label>
                         </li>
-                        <li><input hidden="" type="radio" name="type" id="type-wiki1"
-                                value="https://ff14.huijiwiki.com/wiki/" data-placeholder="wiki一下">
-                            <label for="type-wiki1"><span class="text-muted">中文wiki</span></label>
+                        <li><input hidden="" type="radio" name="type" id="type-wiki-rw"
+                                value="https://ff14.huijiwiki.com/wiki/QuestSearch?name="
+                                data-placeholder="只查询任务，任务检索器">
+                            <label for="type-wiki-rw"><span class="text-muted">任务查询</span></label>
+                        </li>
+                        <li><input hidden="" type="radio" name="type" id="type-wiki-cj"
+                                value="https://ff14.huijiwiki.com/wiki/AchievementSearch?name="
+                                data-placeholder="只查询成就，成就检索器">
+                            <label for="type-wiki-cj"><span class="text-muted">成就查询</span></label>
                         </li>
                     </ul>
                 </div>
@@ -475,24 +481,19 @@
                 </div>
                 <div class="search-group group-c">
                     <ul class="search-type">
-                        <li><input hidden="" type="radio" name="type" id="type-wiki"
-                                value="https://ff14.huijiwiki.com/wiki/" data-placeholder="所有东西查查查">
-                            <label for="type-wiki"><span class="text-muted">直接查询</span></label>
+                        <li><input hidden="" type="radio" name="type" checked="checked" id="type-baidu"
+                                value="https://www.baidu.com/s?wd=" data-placeholder="百度一下，你就知道">
+                            <label for="type-baidu"><span class="text-muted">百度</span></label>
                         </li>
-                        <li><input hidden="" type="radio" name="type" id="type-wiki-wp"
-                                value="https://ff14.huijiwiki.com/wiki/ItemSearch?name=" data-placeholder="只查询物品，物品检索器">
-                            <label for="type-wiki-wp"><span class="text-muted">物品查询</span></label>
+                        <li><input hidden="" type="radio" name="type" id="type-google"
+                                value="https://www.google.com/search?q=" data-placeholder="谷歌搜索">
+                            <label for="type-google"><span class="text-muted">谷歌</span></label>
                         </li>
-                        <li><input hidden="" type="radio" name="type" id="type-wiki-rw"
-                                value="https://ff14.huijiwiki.com/wiki/QuestSearch?name="
-                                data-placeholder="只查询任务，任务检索器">
-                            <label for="type-wiki-rw"><span class="text-muted">任务查询</span></label>
+                        <li><input hidden="" type="radio" name="type" id="type-wiki1"
+                                value="https://ff14.huijiwiki.com/wiki/" data-placeholder="wiki一下">
+                            <label for="type-wiki1"><span class="text-muted">中文wiki</span></label>
                         </li>
-                        <li><input hidden="" type="radio" name="type" id="type-wiki-cj"
-                                value="https://ff14.huijiwiki.com/wiki/AchievementSearch?name="
-                                data-placeholder="只查询成就，成就检索器">
-                            <label for="type-wiki-cj"><span class="text-muted">成就查询</span></label>
-                        </li>
+
                     </ul>
                 </div>
                 <div class="search-group group-d">
