--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
             <div id="search-list" class="hide-type-list">
                 <div class="search-group group-a">
                     <ul class="search-type">
-                        <li><input hidden="" type="radio" name="type" id="type-wiki"
+                        <li><input hidden="" type="radio" name="type" checked="checked" id="type-wiki"
                                 value="https://ff14.huijiwiki.com/wiki/" data-placeholder="所有东西查查查">
                             <label for="type-wiki"><span class="text-muted">直接查询</span></label>
                         </li>
@@ -481,7 +481,7 @@
                 </div>
                 <div class="search-group group-c">
                     <ul class="search-type">
-                        <li><input hidden="" type="radio" name="type" checked="checked" id="type-baidu"
+                        <li><input hidden="" type="radio" name="type"  id="type-baidu"
                                 value="https://www.baidu.com/s?wd=" data-placeholder="百度一下，你就知道">
                             <label for="type-baidu"><span class="text-muted">百度</span></label>
                         </li>
