--- a/index.html
+++ b/index.html
@@ -566,7 +566,27 @@
             </div>
         </div>
     </div>
-    
+    <div class="bulletin-big mx-3 mx-md-0">
+        <div id="bulletin_box" class="card my-2">
+            <div class="card-body py-1 px-2 px-md-3 d-flex flex-fill text-xs text-muted">
+                <div><i class="iconfont icon-bulletin" style="line-height:25px"></i></div>
+                <div class="bulletin mx-1 mx-md-2 carousel-vertical">
+                    <div class="carousel slide" data-ride="carousel" data-interval="3000">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="carousel-item active"><a class="overflowClip_1"
+                                    href="#">零のFF14导航 - ask0.cc 值得你收藏</a></div>
+                            <div class="carousel-item "><a class="overflowClip_1"
+                                    href="https://actff1.web.sdo.com/project/20241025AllSaintsWake/">点我进入最新万圣节活动 - 领动作、道具，换烟花，还有特殊场景可以 cos npc </a></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-fill"></div>
+                <a title="关闭" href="javascript:;" rel="external nofollow" class="bulletin-close"
+                    onclick="$('#bulletin_box').slideUp('slow');"><i class="iconfont icon-close"
+                        style="line-height:25px"></i></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div id="content" class="content-site customize-site">
