压缩图片，更新公告

--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                 </div>
                 <div class="search-group group-c">
                     <ul class="search-type">
-                        <li><input hidden="" type="radio" name="type"  id="type-baidu"
+                        <li><input hidden="" type="radio" name="type" id="type-baidu"
                                 value="https://www.baidu.com/s?wd=" data-placeholder="百度一下，你就知道">
                             <label for="type-baidu"><span class="text-muted">百度</span></label>
                         </li>
@@ -571,12 +571,13 @@
             <div class="card-body py-1 px-2 px-md-3 d-flex flex-fill text-xs text-muted">
                 <div><i class="iconfont icon-bulletin" style="line-height:25px"></i></div>
                 <div class="bulletin mx-1 mx-md-2 carousel-vertical">
-                    <div class="carousel slide" data-ride="carousel" data-interval="3000">
+                    <div class="carousel slide" data-ride="carousel" data-interval="4500">
                         <div class="carousel-inner" role="listbox">
                             <div class="carousel-item active"><a class="overflowClip_1"
-                                    href="#">零のFF14导航 - ask0.cc 值得你收藏</a></div>
-                            <div class="carousel-item "><a class="overflowClip_1"
-                                    href="https://actff1.web.sdo.com/project/20241025AllSaintsWake/">！点我进入最新万圣节活动 - 领动作、道具，换烟花 ~ 2024年11月8日14:00</a></div>
+                                    href="https://actff1.web.sdo.com/project/20241025AllSaintsWake/">！点我进入最新万圣节活动 -
+                                    领动作、道具，换烟花 ~ 2024年11月8日14:00</a></div>
+                            <div class="carousel-item "><a class="overflowClip_1" href="#">更新公告 - ask0.cc
+                                    压缩图片，提高些许访问速度，近期备案后转移国内将正常速度。Nov 1, 2024</a></div>
                         </div>
                     </div>
                 </div>
