--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@
 			    </li>
 			
 			<li >
-				<a href="https://ask0.cc/about">
+				<a href="./about">
                                     <i class="fa fa-cog fa-lg mr-2"></i>
                                     <span>关于</span>
                                 </a>
@@ -182,13 +182,14 @@
         <div class="content">
             <h4 id="这里是-零の-ff14-导航">这里是 零の FF14 导航</h4>
 <h4 id="想说的话">想说的话</h4>
-<p>近期一些朋友总是询问狩猎和 bis 种种链接，我也总是懒得收藏，于是便做了一个导航方便点网页，同时你还能发现一些实用网站（我只加了实用的）。这个网站还是很好记的  <a href="https://ask0.cc">ask0.cc</a> ,希望这个网站的建立能给你一点帮助。<br/><br/></p>
+<p>近期一些朋友总是询问狩猎和 bis 等种种链接，我也总是懒得收藏，索性做了做了一个导航网站，方便大家使用。同时你还能发现一些实用网站（我只加了实用的）。这个网站还是很好记的  <a href="https://ask0.cc">ask0.cc</a> ,希望这个网站的建立能给你一点帮助。</p>
 <br/>
 <br/>
 <h4 id="todo">TODO</h4>
 <ol>
-<li>更新公告</li>
+<li><del>更新公告</del></li>
 <li>添加更多网址</li>
+<li>优化速度</li>
 </ol>
 
         </div>
