--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
                             <li id="menu-item-213"
                                 class="menu-item menu-item-type-custom menu-item-object-custom menu-item-213 sidebar-item">
-                                <a target="_blank" rel="noopener" href="https://qm.qq.com/q/ZJ2fSAGwwi">
+                                <a target="_blank" rel="noopener" href="./about">
                                     <i class="fa fa-info-circle icon-fw icon-lg mr-2"></i>
                                     <span>关于导航</span></a>
                             </li>
@@ -329,7 +329,7 @@
 			    </li>
 			
 			<li >
-				<a href="https://ask0.cc/about">
+				<a href="./about">
                                     <i class="fa fa-cog fa-lg mr-2"></i>
                                     <span>关于</span>
                                 </a>
