更新关于界面

--- a/about/index.html
+++ b/about/index.html
@@ -181,8 +181,7 @@
         <h1 class="mt-5">关于网站</h1>
         <div class="content">
             <h4 id="这里是-零の-ff14-导航">这里是 零の FF14 导航</h4>
-<h4 id="想说的话">想说的话</h4>
-<p>近期一些朋友总是询问狩猎和 bis 等种种链接，我也总是懒得收藏，索性做了做了一个导航网站，方便大家使用。同时你还能发现一些实用网站（我只加了实用的）。这个网站还是很好记的  <a href="https://ask0.cc">ask0.cc</a> ,希望这个网站的建立能给你一点帮助。</p>
+<p>想说的话：近期一些朋友总是询问狩猎和 bis 等种种链接，我也总是懒得收藏，索性做了做了一个导航网站，方便大家使用。同时你还能发现一些实用网站（我只加了实用的）。这个网站还是很好记的  <a href="https://ask0.cc">ask0.cc</a> ,希望这个网站的建立能给你一点帮助。</p>
 <br/>
 <br/>
 <h4 id="todo">TODO</h4>
